sub menu is aded

--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@ gtag("config", "UA-151448923-1", {"anonymize_ip":true});
 <i class="fa fa-search"></i>
 </span>
 <ul class="sub-menu">
+	<!-- added submenu -->
 <li>
 <form class="gridlove-search-form" action="https://htmlcodex.com/" method="get"><input name="s" type="text" value placeholder="Type here to search..." /><button type="submit" class="gridlove-button-search">Search</button></form> </li>
 </ul>
